workflow/engine/skinEngine/base/css/form.css
/* ... */
.panel_tabOptionSelectedOverH___processmaker{
}




.panel_tabOption___processmaker{
    text-align:left;
    font:normal 8pt Tahoma,MiscFixed;
    border:1px solid #A3A2BC;
    border: 1px solid #FF9900;
    position:absolute;
    background-color:#FFE6BF;
    cursor:pointer;
    color:black;
}
.panel_tabOptionOver___processmaker{
    font:normal 8pt Tahoma,MiscFixed;
    cursor:pointer;
    text-align:left;
    border:1px solid #FF9900;
    color:#666666;
    background-color:white;
}
.panel_tabOptionSelected___processmaker, .panel_tabOptionSelectedOver___processmaker{
    font:bold 8pt Tahoma,MiscFixed;
    border: 1px solid #FF9900;
    border-right:1px solid #FFF;
    background-color: #FBFFF2;
    color:#000000;
    text-align: left;
    position: absolute;
}
.panel_tabOptionSelectedOver___processmaker{
    color:#EA560F;


}
.panel_content___processmaker{
    position: relative;
    color: black;
    font: normal 8pt Tahoma,MiscFixed;
    text-align: justify;
    border: 1px solid #A3A2BC;
    border: 1px solid #FF9900;
    border: 1px solid #919B9C;
    /*border-left:1px solid #1983BD;
    border-top:1px solid #1983BD;
    border-right:1px solid #59A5D9;
    border-bottom:1px solid #59A5D9;*/
    background-color: #E8F2F7;
    background-color: #FFFFFF;
    background-color: #F9F9F9;
    background-color: #FFF;
    overflow: auto;
    padding:0px;
}
.panel_statusBar___processmaker{
    position:relative;
    overflow:hidden;
    font:normal 8pt Tahoma,MiscFixed;
    padding:0px;
    margin:0px;
    /*background-color:white;*/
    background-color:transparent;
    min-height:25px;
}
.panel_status___processmaker
{
    text-align:center;
    padding:2;
    padding-left:5px;
    color:#666666;
}
/* processmap Theme.Panels end */



/*    Theme leimnud.module.grid    BEGIN */
/*    gray    BEGIN */
.app_grid_headerBar___gray
{
    font:normal 8pt Tahoma,sans-serif,MiscFixed;
    padding:3px;
    text-align:center;
    border:1px solid #AAA;
    /*border:1px solid #FF9D3F;*/
    border-bottom:0px solid red;
    background-color:#E8E8E8;
    background    :url(/images/classic/grid.title.gray.gif);
    background-position:0px -10px;
}
.app_grid_table___gray
{
    font    :normal 8pt Tahoma,sans-serif;
    width    :100%;
    border-collapse:collapse;
    margin    :0px;
}
.app_grid_title___gray
{
    font:normal 8pt tahoma,helvetica,sans-serif;
    border    :1px solid #cbcbcb;
    border    :1px solid #aaa;
    background-color:#D0DEF0;
    background    :url(/images/classic/grid.title.gray.gif);
    text-align    :center;
    padding    :4px;
    height    :25px;
    color    :#000;
    cursor    :default;
    background-position:0px 0px;
}
.app_grid_data___gray
{
    padding    : 5px;
    border    : 1px solid #dfdfdf;
    color    : #333;
    overflow: auto;
    background-color:#FFF;
}
.app_grid_data___gray select
{
    font:normal 8pt Tahoma,MiscFixed;
    width:100%;
}
.app_grid_bg1___gray
{
    background-color:#e0e0e0;
    border-color    :#cbcbcb;
    border-color    :#aaa;
    text-align:center;
    font-size:7pt;
    color    :#000;
    cursor    :default;
}
.app_grid_bg2___gray
{
    background-color:#e0e0e0;
    border:1px solid #e0e0e0;
    text-align:center;
    color    :#000;
}

.app_grid_pDf___gray, .app_grid_pDp___gray, .app_grid_pDn___gray, .app_grid_pDl___gray, .app_grid_pDfDisabled___gray, .app_grid_pDpDisabled___gray, .app_grid_pDnDisabled___gray, .app_grid_pDlDisabled___gray
{
    width:16px;
    height:16px;
    text-decoration:none;
    padding-left:7px;
    padding-right:7px;
    margin-left:3px;
    margin-right:3px;
    overflow:none;
    background-repeat: no-repeat;
    font:normal 11px sans-serif;
}
.app_grid_pDf___gray
{
    background:url(/images/classic/module.grid/page-first.gif);
}
.app_grid_pDf___gray:hover
{
    background:url(/images/classic/module.grid/page-first-disabled.gif);
}
.app_grid_pDfDisabled___gray
{
    background:url(/images/classic/module.grid/page-first-disabled.gif);
    cursor:default;
}

.app_grid_pDp___gray
{
    background:url(/images/classic/module.grid/page-prev.gif);
}
.app_grid_pDp___gray:hover
{
    background:url(/images/classic/module.grid/page-prev-disabled.gif);
}
.app_grid_pDpDisabled___gray
{
    background:url(/images/classic/module.grid/page-prev-disabled.gif);
    cursor:default;
}

.app_grid_pDn___gray
{
    background:url(/images/classic/module.grid/page-next.gif);
}
.app_grid_pDn___gray:hover
{
    background:url(/images/classic/module.grid/page-next-disabled.gif);
}
.app_grid_pDnDisabled___gray
{
    background:url(/images/classic/module.grid/page-next-disabled.gif);
    cursor:default;
}

.app_grid_pDl___gray
{
    background:url(/images/classic/module.grid/page-last.gif);
}
.app_grid_pDl___gray:hover
{
    background:url(/images/classic/module.grid/page-last-disabled.gif);
}
.app_grid_pDlDisabled___gray
{
    background:url(/images/classic/module.grid/page-last-disabled.gif);
    cursor:default;
}
.app_grid_pDC___gray
{
    width        :35px;
    height        :18px;
    margin-left    :5px;
    margin-right    :5px;
    border        :1px solid #919B9C;
    text-align    :center;
}
/*    gray    END */


/*    Theme leimnud.module.grid.paginator    BEGIN */
.app_grid_paginatorHeader___gray
{
    font:normal 8pt Tahoma,MiscFixed;
    color:black;
    padding:10px;
    text-align:center;
}
.app_grid_paginatorLink___gray
{
    background-color:#E0E0E0;
    padding-left:3px;
    padding-right:3px;
    margin:2px;
    border:1px solid #CBCBCB;
    color:black;
    cursor:hand;
    text-decoration:none;
    background    :url(/images/classic/grid.title.gray.gif);
    background-position:0px -10px;
}
.app_grid_paginatorLink___gray:hover
{
    background-color:#FFF;
    border:1px solid #66667E;
    color:#66667E;
}
/* ... */

